some fixes in shifts-component

--- a/src/components/CalendarGrid/CalendarGrid.module.css
+++ b/src/components/CalendarGrid/CalendarGrid.module.css
@@ -3,6 +3,6 @@
     border: 2px solid transparent;
     display: grid;
     grid-template-columns: repeat(7, 1fr);
-    grid-template-rows: repeat(6, 8em);
-    gap: 2px;
+    grid-template-rows: repeat(6, min-content);
+    gap: 5px;
 }
